--- a/style.css
+++ b/style.css
@@ -8,3 +8,12 @@ height: 100vh;
 .big-font{
 font-size: 200%
 }
+
+.white-opa{
+  background-color: rgba(253, 253, 253, 0.1)
+
+}
+
+.note{
+  font-family: 'Notable', sans-serif;
+}
